# textured-voxelizer

./: .gitignore  Cargo.toml  LICENSE  README.md  blank.brs
src/: barycentric.rs  color.rs  intersect.rs  main.rs  octree.rs  simplify.rs  voxelize.rs
