[package]
name = "textured-voxelizer"
version = "0.1.1"
authors = ["CheezBarger <jacob.labor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = ["blank.brs"]

[dependencies]
structopt = { version = "0.3", default-features = false }

brs = "0.2"
tobj = "2.0"
cgmath = "0.17"
image = "0.23"
uuid = "0.7"
chrono = "0.4"